0.10.2/_sources/reference/generated/spectrochempy.PCA.rst
spectrochempy.PCA
=================

.. currentmodule:: spectrochempy

.. autoclass:: PCA

   

   
   
   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~PCA.X
      ~PCA.Y
      ~PCA.components
      ~PCA.config
      ~PCA.iterated_power
      ~PCA.loadings
      ~PCA.log
      ~PCA.n_components
      ~PCA.n_oversamples
      ~PCA.name
      ~PCA.power_iteration_normalizer
      ~PCA.random_state
      ~PCA.result
      ~PCA.scaled
      ~PCA.scores
      ~PCA.standardized
      ~PCA.svd_solver
      ~PCA.tol
      ~PCA.whiten
   
   

   
   
   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PCA.fit
      ~PCA.fit_transform
      ~PCA.get_components
      ~PCA.inverse_transform
      ~PCA.params
      ~PCA.plot_merit
      ~PCA.plot_score
      ~PCA.plot_scree
      ~PCA.plotmerit
      ~PCA.printev
      ~PCA.reconstruct
      ~PCA.reduce
      ~PCA.reset
      ~PCA.scoreplot
      ~PCA.screeplot
      ~PCA.to_dict
      ~PCA.transform

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: X
   .. autoattribute:: Y
   .. autoattribute:: components
   .. autoattribute:: config
   .. autoattribute:: iterated_power
   .. autoattribute:: loadings
   .. autoattribute:: log
   .. autoattribute:: n_components
   .. autoattribute:: n_oversamples
   .. autoattribute:: name
   .. autoattribute:: power_iteration_normalizer
   .. autoattribute:: random_state
   .. autoattribute:: result
   .. autoattribute:: scaled
   .. autoattribute:: scores
   .. autoattribute:: standardized
   .. autoattribute:: svd_solver
   .. autoattribute:: tol
   .. autoattribute:: whiten
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: fit
   .. automethod:: fit_transform
   .. automethod:: get_components
   .. automethod:: inverse_transform
   .. automethod:: params
   .. automethod:: plot_merit
   .. automethod:: plot_score
   .. automethod:: plot_scree
   .. automethod:: plotmerit
   .. automethod:: printev
   .. automethod:: reconstruct
   .. automethod:: reduce
   .. automethod:: reset
   .. automethod:: scoreplot
   .. automethod:: screeplot
   .. automethod:: to_dict
   .. automethod:: transform
   
   

.. rubric:: Examples using spectrochempy.PCA
.. _sphx_glr_backref_spectrochempy.PCA:

.. minigallery:: spectrochempy.PCA